# hw5

./: .gitignore  README.md  __init__.py  hw5.py  pipeline_example.ipynb  pyproject.toml  setup.py  test_package.ipynb
notebooks/: pipeline_example.ipynb
process_data/: __init__.py  main.py  main_test.py  requirements.txt
process_data/data/: __init__.py  data_preprocessing_all.py
process_data/features/: feature_transform.py
process_data/interfaces/: data_interface.py  feature_interface.py  model_interface.py
process_data/model/: predictor.py
tests/: test_data_preprocessing.py  test_feature_transform.py  test_predictor.py
