[project]
name = "hw5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asttokens<3",
    "comm>=0.2.3",
    "ipython>=9.6.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "process-data>=0.3",
    "scikit-learn>=1.7.2",
    "stack-data>=0.6.3",
]
