[project]
name = "hw5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "process_data"
version = "0.1.0"
description = "Data loading, preprocessing, feature engineering, and ML prediction for diabetes."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Your Name" }]
dependencies = [
  "pandas>=2.3.0",
  "numpy>=2.3.0",
  "scikit-learn>=1.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["process_data*"]
